test/files/neg/t5390.check
t5390.scala:7: error: forward reference extends over definition of value b
    val b = a.B("")
            ^
one error found
